compilateurDeca/src/test/deca/context/invalid/objet/expressions/instanceof_gauche_non_obj.deca
// Description:
//    Test de contexte : instanceof avec membre gauche non objet (int)
//
// Resultats:
//    Erreur contextuelle : Le membre gauche de instanceof doit être un objet ou null
//
// Historique:
//    cree le 15/01/2026

class A { }
{
    1 instanceof A;
}
